| Summary: | ASTERISK-21744: [patch] - fix lower bound check with -ve integer conversion from a float | ||
| Reporter: | Alec Davis (alecdavis) | Labels: | |
| Date Opened: | 2013-05-01 06:02:17 | Date Closed: | 2013-05-02 01:58:38 |
| Priority: | Minor | Regression? | No |
| Status: | Closed/Complete | Components: | Channels/chan_dahdi |
| Versions: | Frequency of Occurrence | Constant | |
| Related Issues: | |||
| Environment: | Attachments: | ( 0) incorrect_lower_bound.diff.txt | |
| Description: | lower bound of a 16bit signed int is -32768 not -32767
| ||
| Comments: | By: Matt Jordan (mjordan) 2013-05-01 21:39:48.577-0500 Looks good to me. | ||